--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,12 @@
   width: 64px;
   height: 64px;
 }
+
+.change_tile_window{
+  z-index: 100;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(50%,0);
+  background-color: red;
+}
