--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,9 +18,23 @@
   box-sizing: border-box;
 }
 
+.ground_layer{
+  display:flex;
+  flex-wrap: wrap;
+  min-height: 32;
+}
+
 .tile{
-  width: 64px;
-  height: 64px;
+  width: 32px;
+  height: 32px;
+}
+
+.change_tile_window-bgc{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  z-index: 9;
 }
 
 .change_tile_window{
@@ -28,6 +42,6 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(50%,0);
+  /*transform: translate(50%,0);*/
   background-color: red;
 }
