--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,7 +74,7 @@
 
 /* MODALS */
 
-.chselect-tile{
+.select-tile{
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
@@ -82,18 +82,25 @@
   z-index: 100;
 }
 
-.chselect-tile__menu{
+.select-tile__menu{
   z-index: 100;
   position: fixed;
-  top: 50%;
+  top: 30%;
   left: 50%;
-  /*transform: translate(50%,0);*/
-  background-color: red;
+  background-color: lightgrey;
+  padding: 20px;
+  border-radius: 15px;
+  border: 2px solid black;
 }
 
-.chselect-tile__menu_tile{
+.select-tile__menu_tile{
   width: 32px;
   height: 32px;
   box-sizing: border-box;
   border: 1px solid black;
+}
+
+.select-tile__menu_tile:hover{
+  cursor: pointer;
+  border: 2px solid rgb(2, 210, 247);
 }
