style: add cursor pointer and outset border on hover for tiles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,8 +98,14 @@
 /* TILE */
 
 .tile{
+  box-sizing: border-box;
   width: 32px;
   height: 32px;
+}
+
+.tile:hover{
+  cursor: pointer;
+  border: 2px aquamarine outset;
 }
 
 /* MODALS */
