--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,10 @@
   width: 85vw;
   height: 100vh;
   background-color: gray;
+  background-image: url('./tiles/background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 5px solid black;
   box-sizing: border-box;
   overflow-x: auto;
