--- a/client/src/App.css
+++ b/client/src/App.css
@@ -100,6 +100,15 @@
   border: 1px solid black;
 }
 
+.overlay-layer{
+  display:flex;
+  flex-wrap: wrap;
+  min-height: 32;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+}
+
 /* PLAYER LAYER */
 
 .player-layer{
