--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,6 +69,39 @@
     padding: 5px 0;
 }
 
+.ui__tiles-selection_tiles-menu_example{
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+}
+
+.ui__tiles-selection_tiles-menu_example:hover{
+    cursor: pointer;
+    border: 2px aquamarine outset;
+}
+
+.tile-selected{
+    border: 2px red outset;
+}
+
+
+.ui__map-size_title{
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-bottom: 1px solid black;
+}
+
+.ui__map-size_label{
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+}
+
+.ui__map-size_label_input{
+    width: 50%;
+}
+
 /* Tilemap */
 
 .tile_map {
@@ -84,12 +117,13 @@
     overflow-x: auto;
     overflow-y: auto;
     position: relative;
+    
 }
 
 /* GRID LAYER */
 .grid-layer {
     pointer-events: none;
-    opacity: 0.5;
+    opacity: 0.3;
     z-index: 4;
     display: flex;
     flex-wrap: wrap;
@@ -153,54 +187,4 @@
 .tile:hover {
     cursor: pointer;
     border: 2px aquamarine outset;
-}
-
-/* MODALS */
-
-.select-tile {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 11 !important;
-}
-
-.select-tile__menu {
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: lightgrey;
-    padding: 20px;
-    border-radius: 15px;
-    border: 2px solid black;
-    z-index: 11;
-}
-
-.select-tile__menu_tile {
-    width: 32px;
-    height: 32px;
-    box-sizing: border-box;
-    border: 1px solid black;
-}
-
-.select-tile__menu_tile:hover {
-    cursor: pointer;
-    border: 2px solid rgb(2, 210, 247);
-}
-
-.select-tile__menu_x-button {
-    padding: 10px;
-    background-color: red;
-    max-width: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    border-radius: 15px;
-}
-
-.select-tile__menu_x-button:hover {
-    background-color: rgb(177, 31, 31);
-    cursor: pointer;
 }
