--- a/templates/views/tutorial.hbs
+++ b/templates/views/tutorial.hbs
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TileMap Editor - Tutorial</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="show-help">
-        <div class="show-help__article">
-            <h1 class="show-help__article_title">How to:</h1>
-            <ul class="show-help__list">
+    <div class="main">
+        <div class="main__article">
+            <h1 class="main__article_title">How to:</h1>
+            <ul class="main__list">
                 <li>
-                    <a href="#1" class="show-help__list_item_link">
+                    <a href="#1" class="main__list_item_link">
                         change tile
                     </a>
                 </li>
                 <li>
-                    <a href="#2" class="show-help__list_item_link">
+                    <a href="#2" class="main__list_item_link">
                         set location name
                     </a>
                 </li>
             </ul>
         </div>
 
-        <hr class="show-help__line" />
+        <hr class="main__line" />
 
-        <div class="show-help__article" id="1">
-            <h3 class="show-help__article_title">
+        <div class="main__article" id="1">
+            <h3 class="main__article_title">
                 How to change the tile
             </h3>
             <p>
@@ -34,25 +35,25 @@
                 left side of the screen
             </p>
             <img
-                src=
+                src="/img/select-tile.png"
                 alt="Tile selection menu"
-                class="show-help__article_image"
+                class="main__article_image"
             />
             <p>
                 In the next step, left click on the tile you want to
                 change.
             </p>
             <img
-                src=
+                src="/img/change-tile.png"
                 alt="Editor fragment"
-                class="show-help__article_image"
+                class="main__article_image"
             />
         </div>
 
-        <hr class="show-help__line" />
+        <hr class="main__line" />
 
-        <div class="show-help__article" id="2">
-            <h3 class="show-help__article_title">
+        <div class="main__article" id="2">
+            <h3 class="main__article_title">
                 Set location name
             </h3>
             <p>
@@ -60,18 +61,18 @@
                 in the place you want to matk on the map.
             </p>
             <img
-                src=
+                src="/img/select-layer.png"
                 alt="Layer selection menu"
-                class="show-help__article_image"
+                class="main__article_image"
             />
             <p>
                 In the next step, left click on the tile you want to
                 change.
             </p>
             <img
-                src=
+                src="/img/set-location.png"
                 alt="Location name input"
-                class="show-help__article_image"
+                class="main__article_image"
             />
         </div>
     </div>
