--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,44 @@
 body{
     margin: 0;
     padding: 0;
-}
-
-.main{
-    width: 100%;
-    background-color: black;
-    color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+}
 
+hr{
+    width: 90%;
+    margin: 20px 0;
+}
+
+.header{
+    width: 100%;
+    margin-top: 10px;
+    padding: 0; 
+    min-height: 200px; 
+    background-image: url(/img/header.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+
+.main{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.navbar{
+    width: 30%;
+    border-right: 1px solid black;
+}
+
+.articles{
+    width: 70%;
+    padding-left: 40px;
+    overflow-y: auto;
 }
 
 
@@ -21,7 +48,7 @@ body{
 
 .main__list_item_link{
     text-decoration: none;
-    color: white;
+    color:  black;
 }
 
 .main__list_item_link:hover{
