--- a/templates/partials/articles.hbs
+++ b/templates/partials/articles.hbs
@@ -1,7 +1,7 @@
 <div class="articles">
         
-        <div class="main__article" id="1">
-            <h3 class="main__article_title">
+        <div class="articles__section" id="1">
+            <h3 class="articles__section_title">
                 How to: change the tile
             </h3>
             <p>
@@ -11,7 +11,7 @@
             <img
                 src="/img/select-tile.png"
                 alt="Tile selection menu"
-                class="main__article_image"
+                class="articles__section_image"
             />
             <p>
                 In the next step, left click on the tile you want to
@@ -20,14 +20,14 @@
             <img
                 src="/img/change-tile.png"
                 alt="Editor fragment"
-                class="main__article_image"
+                class="articles__section_image"
             />
         </div>
 
-        <hr class="main__line" />
+        <hr class="articles__line" />
 
-        <div class="main__article" id="2">
-            <h3 class="main__article_title">
+        <div class="articles__section" id="2">
+            <h3 class="articles__section_title">
                 How to: set location name
             </h3>
             <p>
@@ -37,7 +37,7 @@
             <img
                 src="/img/select-layer.png"
                 alt="Layer selection menu"
-                class="main__article_image"
+                class="articles__section_image"
             />
             <p>
                 In the next step, left click on the tile you want to
@@ -46,7 +46,7 @@
             <img
                 src="/img/set-location.png"
                 alt="Location name input"
-                class="main__article_image"
+                class="articles__section_image"
             />
         </div>
     </div>
