--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,13 +1,13 @@
 <div class="navbar">
-            <h1 class="main__article_title">How to:</h1>
-            <ul class="main__list">
-                <li>
-                    <a href="#1" class="main__list_item_link">
+            <h1 class="navbar__title">How to:</h1>
+            <ul class="navbar__list">
+                <li class="navbar__list_item">
+                    <a href="#1" class="navbar__list_item_link">
                         change tile
                     </a>
                 </li>
-                <li>
-                    <a href="#2" class="main__list_item_link">
+                <li class="navbar__list_item">
+                    <a href="#2" class="navbar__list_item_link">
                         set location name
                     </a>
                 </li>
