--- a/templates/views/tutorial.hbs
+++ b/templates/views/tutorial.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TileMap Editor - Tutorial</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Trade+Winds&display=swap" rel="stylesheet">
 </head>
 <body>
     {{>header}}
