--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,8 @@ body{
     padding: 0 10px;
 }
 
+
+
 /* UI */
 
 .ui {
@@ -199,7 +201,9 @@ body{
     width: fit-content;
 }
 
-.add-location{
+/* Modals */
+
+.modal-window{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -213,22 +217,32 @@ body{
     left: 0;
 }
 
-.add-location_form{
-    padding: 20px;
-    background-color: lightgray;
-    border: 5px solid black;
+.modal-window_title{
+    font-size: 2.5rem;
+    color: #c8d6e5;
+    font-weight: 700;
 }
-.add-location_form_input{
+
+.modal-window_form{
+    padding: 20px;
+    background-color: #576574;
+    border: 5px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.modal-window_form_label_input, .modal-window_form_input{
     padding: 10px;
 }
-.add-location_form_button{
+.modal-window_form_button{
     padding: 10px;
     color: white;
-    background-color: rgb(4, 61, 4);
+    background-color: #10ac84;
 }
 
 .add-location_form_button:hover{
-    background-color: rgb(16, 150, 16);
+    background-color: #1dd1a1;
     cursor: pointer;
 }
 
