feat: add error message for MapSize modal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -224,6 +224,12 @@ body{
     font-weight: 700;
 }
 
+.modal-window_error{
+    font-size: 1.5rem;
+    color: #ee5253;
+    font-weight: 400;
+}
+
 .modal-window_form{
     padding: 20px;
     background-color: #576574;
