--- a/templates/partials/articles.hbs
+++ b/templates/partials/articles.hbs
@@ -32,7 +32,7 @@
             </h3>
             <p>
                 Switch to the overlay layer and right click on the tile
-                in the place you want to matk on the map.
+                in the place you want to mark on the map.
             </p>
             <img
                 src="/img/select-layer.png"
@@ -40,8 +40,7 @@
                 class="articles__section_image"
             />
             <p>
-                In the next step, left click on the tile you want to
-                change.
+                Type location name and click "Save"
             </p>
             <img
                 src="/img/set-location.png"
