--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,7 @@ a{
 }
 
 .editor__version-display_item{
-    color: aqua;
+    color: var(--accents);
     font-weight: 500;
     font-style: italic;
     padding: 0 10px;
