style: add media query to tutorial page

--- a/templates/partials/articles.hbs
+++ b/templates/partials/articles.hbs
@@ -5,7 +5,7 @@
                 How to: change the tile
             </h3>
             <p>
-                First, select the image from the "Select Tile" menu on the left side of the screen
+                First, select the image from the "Select Tile" menu on the left side of the screen.
             </p>
             <img
                 src="/img/select-tile.png"
@@ -29,7 +29,7 @@
                 How to: set location name
             </h3>
             <p>
-                Switch to the overlay layer and right-click on the tile in the place you want to mark on the map.
+                Look at the "Select Active Layer" menu section. The active layer should be highlighted in red. Switch to the overlay layer and right-click a tile on the map.
             </p>
             <img
                 src="/img/select-layer.png"
